--- a/DemoSwift/Demo/CTCharts/CTChartDemoViewController.xib
+++ b/DemoSwift/Demo/CTCharts/CTChartDemoViewController.xib
@@ -35,13 +35,13 @@
                         <constraint firstAttribute="height" constant="205" id="4Kv-e3-Bqu"/>
                     </constraints>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Opf-0V-N9L">
-                    <rect key="frame" x="20" y="586" width="78" height="30"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Opf-0V-N9L">
+                    <rect key="frame" x="20" y="586" width="120" height="30"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="78" id="R7a-JF-RY3"/>
+                        <constraint firstAttribute="width" constant="120" id="R7a-JF-RY3"/>
                         <constraint firstAttribute="height" constant="30" id="o92-dm-TD8"/>
                     </constraints>
-                    <state key="normal" title="滚动chart"/>
+                    <state key="normal" title="滚动时间chart"/>
                     <connections>
                         <action selector="onScrollChartButton:" destination="-1" eventType="touchUpInside" id="aot-fU-Qad"/>
                     </connections>
