--- a/DemoSwift/Demo/BigImage/OriginImageViewController.xib
+++ b/DemoSwift/Demo/BigImage/OriginImageViewController.xib
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -21,17 +20,20 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="N1d-Mj-jxJ">
-                    <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                    <rect key="frame" x="167.5" y="313.5" width="40" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="40" id="A2G-Eu-7MO"/>
+                        <constraint firstAttribute="height" constant="40" id="kS0-EV-XBD"/>
+                    </constraints>
                 </imageView>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="N1d-Mj-jxJ" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="A11-B7-PNl"/>
-                <constraint firstItem="N1d-Mj-jxJ" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="KVP-if-Joc"/>
-                <constraint firstItem="N1d-Mj-jxJ" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="Pfr-w8-cbD"/>
-                <constraint firstItem="N1d-Mj-jxJ" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="cy3-sN-dzT"/>
+                <constraint firstItem="N1d-Mj-jxJ" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="ELf-iM-Lht"/>
+                <constraint firstItem="N1d-Mj-jxJ" firstAttribute="centerY" secondItem="fnl-2z-Ty3" secondAttribute="centerY" id="Tad-KF-gic"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <point key="canvasLocation" x="87" y="154"/>
         </view>
     </objects>
 </document>
