--- a/DemoSwift/Demo/BigImage/UIKitBigImageViewController.xib
+++ b/DemoSwift/Demo/BigImage/UIKitBigImageViewController.xib
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -21,17 +20,20 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nbT-4r-rxT">
-                    <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                    <rect key="frame" x="167.5" y="313.5" width="40" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="40" id="F6D-Vd-ieC"/>
+                        <constraint firstAttribute="height" constant="40" id="R9z-kD-M4i"/>
+                    </constraints>
                 </imageView>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="nbT-4r-rxT" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="eEL-v6-W5U"/>
-                <constraint firstItem="nbT-4r-rxT" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="tCn-U4-7or"/>
-                <constraint firstItem="nbT-4r-rxT" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="vED-Mc-NmE"/>
-                <constraint firstItem="nbT-4r-rxT" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="xAS-jb-gzQ"/>
+                <constraint firstItem="nbT-4r-rxT" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="glx-7M-Ka5"/>
+                <constraint firstItem="nbT-4r-rxT" firstAttribute="centerY" secondItem="fnl-2z-Ty3" secondAttribute="centerY" id="sFI-dJ-8re"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <point key="canvasLocation" x="87" y="116"/>
         </view>
     </objects>
 </document>
